tests/error/alias_errors/mutual_recursive.err
Error: Unsupported (at $FILE:5:0)
  | 
3 | 
4 | Alias1 = guppy.type_alias("Alias1", "Alias2")
5 | Alias2 = guppy.type_alias("Alias2", "Alias1")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Recursive definitions are not supported

Guppy compilation failed due to 1 previous error
